added exercices to quand_comment_combien

--- a/french/pages/exercise_quand_comment_combien.html
+++ b/french/pages/exercise_quand_comment_combien.html
@@ -28,6 +28,128 @@
             <ol class="nested">
                 <li>
                     <section class="span-half">
+                        <h4>Transformez selon le modèle avec <i>où</i>, <i>quand</i>, <i>comment</i>.</h4>
+
+                        <ol>
+                            <li>
+                                <span>Vous sortez vendredi ou samedi ?</span>
+                                <span>- Quand sortez-vous ?</span>
+                            </li>
+
+                            <li>
+                                <span title="Où allez-vous">Vous allez au cinéma ou au centre commercial ?</span>
+                                <span>-&nbsp;<input type="text" pattern="Où allez-vous">
+                                    ?</span>
+                            </li>
+
+                            <li>
+                                <span title="Comment partez-vous">Vous partez en auto ou en autobus ?</span>
+                                <span>-&nbsp;<input type="text" pattern="Comment partez-vous">
+                                    ?</span>
+                            </li>
+
+                            <li>
+                                <span title="Quand revenez-vous">Vous revenez à 22h ou à 23h ?</span>
+                                <span>-&nbsp;<input type="text" pattern="Quand revenez-vous">
+                                    ?</span>
+                            </li>
+
+                            <li>
+                                <span title="Quand dormez-vous">Vous dormez à 23h ou à minuit ?</span>
+                                <span>-&nbsp;<input type="text" pattern="Quand dormez-vous">
+                                    ?</span>
+                            </li>
+                        </ol>
+                    </section>
+                </li>
+
+                <li>
+                    <section class="span-half">
+                        <h4><i>Où</i>, <i>quand</i>, <i>comment</i>, <i>combien</i>, <i>pourquoi</i> : complétez.</h4>
+
+                        <ol>
+                            <li>
+                                <span>Où habitez-vous ?</span>
+                                <span>- J’habite à Trois-Rivières.</span>
+                            </li>
+
+                            <li>
+                                <span>
+                                    <input type="text" pattern="Quand">
+                                    allez-vous à l’épicerie ?
+                                </span>
+                                <span title="Quand">- J’y vais le samedi matin.</span>
+                            </li>
+
+                            <li>
+                                <span>
+                                    <input type="text" pattern="Comment">
+                                    allez-vous à l’épicerie ?
+                                </span>
+                                <span title="Comment">- J’y vais en autobus.</span>
+                            </li>
+
+                            <li>
+                                <span>
+                                    <input type="text" pattern="Où">
+                                    allez-vous à l’école ?
+                                </span>
+                                <span title="Où">- Je vais à l’université. </span>
+                            </li>
+
+                            <li>
+                                <span>
+                                    <input type="text" pattern="Quand">
+                                    terminez-vous les cours ?
+                                </span>
+                                <span title="Quand">- Je termine en avril.</span>
+                            </li>
+
+                            <li>
+                                <span>
+                                    <input type="text" pattern="Pourquoi">
+                                    étudiez-vous ici ?
+                                </span>
+                                <span title="Pourquoi">- Parce que je veux apprendre le français.</span>
+                            </li>
+
+                            <li>
+                                <span>
+                                    <input type="text" pattern="Combien">
+                                    de temps étudiez-vous le soir ?
+                                </span>
+                                <span title="Combien">- J’étudie trois heures.</span>
+                            </li>
+
+                            <li>
+                                <span>
+                                    <input type="text" pattern="Quand">
+                                    travaillez-vous ?
+                                </span>
+                                <span title="Quand">- Je travaille pendant l’été.</span>
+                            </li>
+
+                            <li>
+                                <span>
+                                    <input type="text" pattern="Pourquoi">
+                                    travaillez-vous ?
+                                </span>
+                                <span title="Pourquoi">- Parce que j’ai besoin d’argent.</span>
+                            </li>
+
+                            <li>
+                                <span>
+                                    <input type="text" pattern="Combien">
+                                    de mois travaillez-vous ?
+                                </span>
+                                <span title="Combien">- Je travaille quatre mois.</span>
+                            </li>
+                        </ol>
+                    </section>
+                </li>
+
+                <li>
+                    <section class="span-half">
                         <h4>Posez les questions avec <i>est-ce que</i></h4>
 
                         <ol>
