--- a/french/pages/stats.html
+++ b/french/pages/stats.html
@@ -63,7 +63,7 @@
                     <tr>
                         <th rowspan="3">date</th>
                         <th class="duration" rowspan="3">durée <br /><br />(heure:) min: sec</th>
-                        <th class="conjugations conjugations-plus others" colspan="6">A1</th>
+                        <th class="conjugations conjugations-plus others" colspan="7">A1</th>
                         <th class="conjugations conjugations-plus others" colspan="10">A2</th>
                         <th class="conjugations" colspan="6">B1</th>
                         <th class="conjugations conjugations-plus" colspan="7">B2</th>
@@ -75,6 +75,7 @@
                         <th class="conjugations-plus" colspan="1">Devoir Pouvoir Falloir</th>
                         <th class="conjugations" colspan="2">passé composé</th>
                         <th class="others" colspan="1">Qui Quel Quelle</th>
+                        <th class="others" colspan="1">Quand Comment Combien</th>
 
                         <!-- A2 -->
                         <th class="conjugations-plus" colspan="1">Avoir ou Être</th>
@@ -112,8 +113,8 @@
                         </th>
                         <th class="conjugations"><a href="exercise_presentperfect.html">texte</a></th>
 
-                        <th class="others"><a href="exercise_qui_quel_quelle.html">texte</a>
-                        </th>
+                        <th class="others"><a href="exercise_qui_quel_quelle.html">texte</a></th>
+                        <th class="others"><a href="exercise_quand_comment_combien.html">texte</a></th>
 
                         <!-- A2 -->
                         <th class="conjugations-plus"><a href="exercise_avoir_etre.html">texte</a></th>
@@ -196,6 +197,7 @@
                             <td class="conjugations" data-key="exercise_presentperfect.html"></td>
 
                             <td class="others" data-key="exercise_qui_quel_quelle.html"></td>
+                            <td class="others" data-key="exercise_quand_comment_combien.html"></td>
 
                             <!-- A2 -->
                             <td class="conjugations-plus" data-key="exercise_avoir_etre.html"></td>
