fine-tuned quand, comment, combien; qui, quel, quelle; devoir, pouvoir, falloir

--- a/french/pages/exercise_devoir_pouvoir_falloir_vouloir.html
+++ b/french/pages/exercise_devoir_pouvoir_falloir_vouloir.html
@@ -365,7 +365,7 @@
                             </li>
 
                             <li>
-                                <b title="peut ... doit">désir ... obligation</b> – On
+                                <b title="peut ... doit">possibilité ... obligation</b> – On
                                 <input type="text" pattern="peut">
                                 visiter d’autres pays, mais on
                                 <input type="text" pattern="doit">
