--- a/french/pages/exercise_quand_comment_combien.html
+++ b/french/pages/exercise_quand_comment_combien.html
@@ -150,7 +150,7 @@
 
                 <li>
                     <section class="span-half">
-                        <h4>Posez les questions avec <i>est-ce que</i></h4>
+                        <h4>Posez les questions avec <i>est-ce que</i>.</h4>
 
                         <ol>
                             <li>
@@ -214,7 +214,7 @@
                 </li>
 
                 <li>
-                    <section class="span-half first-span-grow">
+                    <section class="span-half first-span-grows">
                         <h4>Posez la question avec : <i>où</i>, <i>quand</i>, <i>comment</i>, <i>quand</i> ou
                             <i>combien</i>.
                         </h4>
@@ -222,62 +222,66 @@
                         <ol>
                             <li>
                                 <span>Quand est-ce que tu manges à la maison ?</span>
-                                <span>- Ce midi, je mange à la maison.</span>
+                                <span>- <b>Ce midi</b>, je mange à la maison.</span>
                             </li>
 
                             <li>
                                 <span><input type="text" pattern="Où est-ce que tu te reposes"> ?</span>
-                                <span title="Où est-ce que tu te reposes">- Je me repose dans le jardin.</span>
+                                <span title="Où est-ce que tu te reposes">- Je me repose <b>dans le jardin</b>.</span>
                             </li>
 
                             <li>
                                 <span><input type="text" pattern="Comment est-ce que tu voyages l'été"> ?</span>
-                                <span title="Comment est-ce que tu voyages l'été">- L’été, je voyage en train.</span>
+                                <span title="Comment est-ce que tu voyages l'été">- L’été, je voyage <b>en
+                                        train</b>.</span>
                             </li>
 
                             <li>
                                 <span><input type="text" pattern="Quand est-ce que tu vas faire un gâteau"> ?</span>
-                                <span title="Quand est-ce que tu vas faire un gâteau">- Demain, je vais faire un
+                                <span title="Quand est-ce que tu vas faire un gâteau">- <b>Demain</b>, je vais faire un
                                     gâteau.</span>
                             </li>
 
                             <li>
                                 <span><input type="text" pattern="Où est-ce qu'elle promène le chien"> ?</span>
-                                <span title="Où est-ce qu'elle promène le chien">- Elle promène le chien dans le
-                                    parc.</span>
+                                <span title="Où est-ce qu'elle promène le chien">- Elle promène le chien <b>dans le
+                                        parc</b>.</span>
                             </li>
 
                             <li>
                                 <span><input type="text" pattern="Comment est-ce qu'elle va à l'école"> ?</span>
-                                <span title="Comment est-ce qu'elle va à l'école">- Elle va à l’école en autobus.</span>
+                                <span title="Comment est-ce qu'elle va à l'école">- Elle va à l’école <b>en
+                                        autobus</b>.</span>
                             </li>
 
                             <li>
                                 <span><input type="text" pattern="Combien est-ce qu'elle paie ce crayon"> ?</span>
-                                <span title="Combien est-ce qu'elle paie ce crayon">- Elle paie ce crayon 15 $.</span>
+                                <span title="Combien est-ce qu'elle paie ce crayon">- Elle paie ce crayon <b>15
+                                        $</b>.</span>
                             </li>
 
                             <li>
                                 <span><input type="text" pattern="Comment est-ce qu'il écrit"> ?</span>
-                                <span title="Comment est-ce qu'il écrit">- Il écrit avec un style.</span>
+                                <span title="Comment est-ce qu'il écrit">- Il écrit <b>avec un style</b>.</span>
                             </li>
 
                             <li>
                                 <span><input type="text" pattern="Où est-ce que vous achetez des souliers"> ?</span>
-                                <span title="Où est-ce que vous achetez des souliers">- Nous achetons des souliers au
-                                    magasin.</span>
+                                <span title="Où est-ce que vous achetez des souliers">- Nous achetons des souliers <b>au
+                                        magasin</b>.</span>
                             </li>
 
                             <li>
                                 <span><input type="text" pattern="Comment est-ce qu'elle cuisine"> ?</span>
-                                <span title="Comment est-ce qu'elle cuisine">- Elle cuisine avec des légumes.</span>
+                                <span title="Comment est-ce qu'elle cuisine">- Elle cuisine <b>avec des
+                                        légumes</b>.</span>
                             </li>
                         </ol>
                     </section>
                 </li>
 
                 <li>
-                    <section class="span-half first-span-grow">
+                    <section class="span-half first-span-grows">
                         <h4>Posez la question avec : <i>où</i>, <i>comment</i>, <i>qui</i>, <i>quand</i>,
                             <i>pourquoi</i>, <i>combien</i> ou <i>est-ce que</i>.
                         </h4>
@@ -285,69 +289,73 @@
                         <ol>
                             <li>
                                 <span>Quand est-ce que tu vas aller à Montréal ?</span>
-                                <span>- Dimanche, je vais aller à Montréal.</span>
+                                <span>- <b>Dimanche</b>, je vais aller à Montréal.</span>
                             </li>
 
                             <li>
                                 <span><input type="text" pattern="Combien est-ce que le voyage coûte"> ?</span>
-                                <span title="Combien est-ce que le voyage coûte">- Le voyage coûte 50$.</span>
+                                <span title="Combien est-ce que le voyage coûte">- Le voyage coûte <b>50$</b>.</span>
                             </li>
 
                             <li>
                                 <span><input type="text" pattern="Qui est-ce que vous voyez"> ?</span>
-                                <span title="Qui est-ce que vous voyez">- Nous voyons cette fille.</span>
+                                <span title="Qui est-ce que vous voyez">- Nous voyons <b>cette fille</b>.</span>
                             </li>
 
                             <li>
                                 <span><input type="text" pattern="Où est-ce qu'il mange"> ?</span>
-                                <span title="Où est-ce qu'il mange">- Il mange à la cafétéria.</span>
+                                <span title="Où est-ce qu'il mange">- Il mange <b>à la cafétéria</b>.</span>
                             </li>
 
                             <li>
-                                <span><input type="text" pattern="Quand est-ce qu'elle fait du ski"> ?</span>
-                                <span title="Quand est-ce qu'elle fait du ski">- L’hiver, ils font du ski.</span>
+                                <span><input type="text" pattern="Quand est-ce qu'ils font du ski"> ?</span>
+                                <span title="Quand est-ce qu'ils font du ski">- <b>L’hiver</b>, ils font du ski.</span>
                             </li>
 
                             <li>
                                 <span><input type="text" pattern="Comment est-ce qu'elle paie"> ?</span>
-                                <span title="Comment est-ce qu'elle paie">- Elle paie avec une carte de crédit.</span>
+                                <span title="Comment est-ce qu'elle paie">- Elle paie <b>avec une carte de
+                                        crédit</b>.</span>
                             </li>
 
                             <li>
                                 <span><input type="text" pattern="Où est-ce que tu vas visiter"> ?</span>
-                                <span title="Où est-ce que tu vas visiter">- Je vais visiter l’Ontario.</span>
+                                <span title="Où est-ce que tu vas visiter">- Je vais visiter <b>l’Ontario</b>.</span>
                             </li>
 
                             <li>
                                 <span><input type="text" pattern="Qui est-ce que vous regardez"> ?</span>
-                                <span title="Qui est-ce que vous regardez">- Nous regardons l’homme.</span>
+                                <span title="Qui est-ce que vous regardez">- Nous regardons <b>l’homme</b>.</span>
                             </li>
 
                             <li>
                                 <span><input type="text" pattern="Est-ce que tu fais de la natation"> ?</span>
-                                <span title="Est-ce que tu fais de la natation">- Oui, je fais de la natation.</span>
+                                <span title="Est-ce que tu fais de la natation">- Oui, <b>je fais de la
+                                        natation</b>.</span>
                             </li>
 
                             <li>
                                 <span><input type="text" pattern="Combien est-ce qu'il va payer ce chapeau"> ?</span>
                                 <span title="Combien est-ce qu'il va payer ce chapeau">- Il va payer ce chapeau
-                                    10$.</span>
+                                    <b>10$</b>.</span>
                             </li>
 
                             <li>
                                 <span><input type="text" pattern="Est-ce que tu joues au football"> ?</span>
-                                <span title="Est-ce que tu joues au football">- Oui, je joue au football.</span>
+                                <span title="Est-ce que tu joues au football">- Oui, <b>je joue au football</b>.</span>
                             </li>
 
                             <li>
                                 <span><input type="text" pattern="Comment est-ce qu'elle fait de la peinture"> ?</span>
-                                <span title="Comment est-ce qu'elle fait de la peinture">- Elle fait de la peinture avec
-                                    un pinceau.</span>
+                                <span title="Comment est-ce qu'elle fait de la peinture">- Elle fait de la peinture
+                                    <b>avec
+                                        un pinceau</b>.</span>
                             </li>
 
                             <li>
                                 <span><input type="text" pattern="Où est-ce qu'elle part l'été"> ?</span>
-                                <span title="Où est-ce qu'elle part l'été">- L’été, elle part à la campagne.</span>
+                                <span title="Où est-ce qu'elle part l'été">- L’été, elle part <b>à la
+                                        campagne</b>.</span>
                             </li>
                         </ol>
                     </section>
