--- a/french/pages/exercise_qui_quel_quelle.html
+++ b/french/pages/exercise_qui_quel_quelle.html
@@ -103,23 +103,23 @@
                             </li>
 
                             <li>
-                                <span title="Quel secret">Tu connais son secret(m) ?</span>
-                                <span>-&nbsp;<input type="text" pattern="Quel secret"> ?</span>
+                                <span title="Quel secret">Tu connais son secret ?</span>
+                                <span>-&nbsp;<input type="text" pattern="[Qq]uel secret"> ?</span>
                             </li>
 
                             <li>
-                                <span title="Quelles photos">Vous avez vu les photos(f) ?</span>
-                                <span>-&nbsp;<input type="text" pattern="Quelles photos"> ?</span>
+                                <span title="Quelles photos">Vous avez vu les photos ?</span>
+                                <span>-&nbsp;<input type="text" pattern="[Qq]uelles photos"> ?</span>
                             </li>
 
                             <li>
                                 <span title="Quel voisin">Mon voisin est mort !</span>
-                                <span>-&nbsp;<input type="text" pattern="Quel voisin"> !</span>
+                                <span>-&nbsp;<input type="text" pattern="[Qq]uel voisin"> !</span>
                             </li>
 
                             <li>
                                 <span title="Quel argent">L’argent est faux !</span>
-                                <span>-&nbsp;<input type="text" pattern="Quel argent"> !</span>
+                                <span>-&nbsp;<input type="text" pattern="[Qq]uel argent"> !</span>
                             </li>
                         </ol>
                     </section>
@@ -184,7 +184,7 @@
                 </li>
 
                 <li>
-                    <section class="span-half">
+                    <section class="span-two-thrids-third">
                         <h4>Complétez avec <i>qui</i>, <i>quel</i>, <i>quelle</i>.</h4>
 
                         <ol>
