added text exercise for de-du-des

--- a/french/index.html
+++ b/french/index.html
@@ -183,9 +183,9 @@
 
   <div class="card">
     <span class="cefr">A1</span>
-    <header>Qui, quel, quelle</header>
+    <header>De, du, des</header>
     <a class="theory">théorie</a>
-    <a href="pages/exercise_qui_quel_quelle.html">exercice de texte</a>
+    <a href="pages/exercise_de_du_des.html">exercice de texte</a>
   </div>
 
   <div class="card">
@@ -193,6 +193,13 @@
     <header>Quand, Comment, Combien</header>
     <a class="theory">théorie</a>
     <a href="pages/exercise_quand_comment_combien.html">exercice de texte</a>
+  </div>
+
+  <div class="card">
+    <span class="cefr">A1</span>
+    <header>Qui, quel, quelle</header>
+    <a class="theory">théorie</a>
+    <a href="pages/exercise_qui_quel_quelle.html">exercice de texte</a>
   </div>
 
   <div class="card">
