--- a/french/pages/stats.html
+++ b/french/pages/stats.html
@@ -48,8 +48,8 @@
                     <label>
                         <input type="checkbox" name="conjugations-plus" checked="checked">Conjugaisons plus
                     </label>
-                    <label title="prépositions, conjonctions, pronoms">
-                        <input type="checkbox" name="others" checked="checked">Prép./conj./pronoms
+                    <label title="prépositions, conjonctions, déterminant">
+                        <input type="checkbox" name="others" checked="checked">Prép./conj./déterm
                     </label>
                     <label>
                         <input type="checkbox" name="tense-sequence" checked="checked">Concordance des temps
@@ -63,7 +63,7 @@
                     <tr>
                         <th rowspan="3">date</th>
                         <th class="duration" rowspan="3">durée <br /><br />(heure:) min: sec</th>
-                        <th class="conjugations conjugations-plus others" colspan="7">A1</th>
+                        <th class="conjugations conjugations-plus others" colspan="8">A1</th>
                         <th class="conjugations conjugations-plus others" colspan="10">A2</th>
                         <th class="conjugations" colspan="6">B1</th>
                         <th class="conjugations conjugations-plus" colspan="7">B2</th>
@@ -73,6 +73,7 @@
                         <!-- A1 -->
                         <th class="conjugations" colspan="2">présent</th>
                         <th class="conjugations-plus" colspan="1">Devoir Pouvoir Falloir</th>
+                        <th class="others" colspan="1">De Du Des</th>
                         <th class="others" colspan="1">Quand Comment Combien</th>
                         <th class="conjugations" colspan="2">passé composé</th>
                         <th class="others" colspan="1">Qui Quel Quelle</th>
@@ -106,6 +107,8 @@
                         <th class="conjugations"><a href="exercise_present.html">texte</a></th>
 
                         <th class="conjugations-plus"><a href="exercise_devoir_pouvoir_falloir_vouloir.html">texte</a>
+
+                        <th class="others"><a href="exercise_de_du_des.html">texte</a></th>
                         </th>
                         <th class="others"><a href="exercise_quand_comment_combien.html">texte</a></th>
 
@@ -192,6 +195,7 @@
                             <td class="conjugations" data-key="exercise_present.html"></td>
 
                             <td class="conjugations-plus" data-key="exercise_devoir_pouvoir_falloir_vouloir.html"></td>
+                            <td class="others" data-key="exercise_de_du_des.html"></td>
                             <td class="others" data-key="exercise_quand_comment_combien.html"></td>
 
                             <td class="conjugations" data-key="conjugations.html?Le%20pass%C3%A9%20compos%C3%A9"></td>
