fine-tuned text exercise for de-du-des

--- a/french/pages/exercise_de_du_des.html
+++ b/french/pages/exercise_de_du_des.html
@@ -80,7 +80,7 @@
                             <li>
                                 Les Américains aiment
                                 <input type="text" pattern="le">
-                                <b ttile="le">boeuf</b>. Ils mangent
+                                <b title="le">boeuf</b>. Ils mangent
                                 <input type="text" pattern="du">
                                 <b title="du">boeuf</b>.
                             </li>
