fine-tuned avoir-etre

--- a/french/pages/exercise_avoir_etre.html
+++ b/french/pages/exercise_avoir_etre.html
@@ -103,7 +103,7 @@
 
                         <ol>
                             <li>
-                                Mes cousines (f) (<b title="sont venues">venir</b>)
+                                Mes cousines (<b title="sont venues">venir</b>)
                                 <input type="text" pattern="sont venues">
                                 me visiter pendant les vacances.
                             </li>
@@ -121,7 +121,7 @@
                             </li>
 
                             <li>
-                                Julie (f), tu (<b title="es arrivée">arriver</b>)
+                                Julie, tu (<b title="es arrivée">arriver</b>)
                                 <input type="text" pattern="es arrivée">
                                 en retard.
                             </li>
@@ -145,7 +145,7 @@
                             </li>
 
                             <li>
-                                Justin (m) (<b title="est entré">entrer</b>)
+                                Justin (<b title="est entré">entrer</b>)
                                 <input type="text" pattern="est entré">
                                 dans la salle de classe.
                             </li>
@@ -172,7 +172,7 @@
 
                         <ol>
                             <li>
-                                Hier, Sébastien (m) (<b title="a paru">paraître</b>)
+                                Hier, Sébastien (<b title="a paru">paraître</b>)
                                 <input type="text" pattern="a paru">
                                 fatigué.
                             </li>
@@ -219,7 +219,7 @@
                             </li>
 
                             <li>
-                                Jasmine (f) (<b title="est sortie">sortir</b>)
+                                Jasmine (<b title="est sortie">sortir</b>)
                                 <input type="text" pattern="est sortie">
                                 avec son nouvel ami.
                             </li>
@@ -252,7 +252,7 @@
                             </li>
 
                             <li>
-                                Cendrillon (f) (<b title="est rentrée">rentrer</b>)
+                                Cendrillon (<b title="est rentrée">rentrer</b>)
                                 <input type="text" pattern="est rentrée">
                                 chez elle juste avant le coup de minuit.
                             </li>
@@ -296,7 +296,7 @@
                             </li>
 
                             <li>
-                                Mélisa (f) (<b title="est retournée">retourner</b>)
+                                Mélisa (<b title="est retournée">retourner</b>)
                                 <input type="text" pattern="est retournée">
                                 chez elle à pied.
 
@@ -319,13 +319,13 @@
                             </li>
 
                             <li>
-                                Philippe (m) (<b title="a passé">passer</b>)
+                                Philippe (<b title="a passé">passer</b>)
                                 <input type="text" pattern="a passé">
                                 son permis de conduire sans nervosité.
                             </li>
 
                             <li>
-                                Les voyageurs (m) (<b title="sont montés">monter</b>)
+                                Les voyageurs (<b title="sont montés">monter</b>)
                                 <input type="text" pattern="sont montés">
                                 dans l’avion après deux heures d’attente.
                             </li>
