--- a/french/index.html
+++ b/french/index.html
@@ -190,6 +190,13 @@
 
   <div class="card">
     <span class="cefr">A1</span>
+    <header>ce, ces, cet</header>
+    <a class="theory">théorie</a>
+    <a href="pages/exercise_ce_ces_cet.html">exercice de texte</a>
+  </div>
+
+  <div class="card">
+    <span class="cefr">A1</span>
     <header>Quand, Comment, Combien</header>
     <a class="theory">théorie</a>
     <a href="pages/exercise_quand_comment_combien.html">exercice de texte</a>
