--- a/french/index.html
+++ b/french/index.html
@@ -190,7 +190,7 @@
 
   <div class="card">
     <span class="cefr">A1</span>
-    <header>ce, ces, cet</header>
+    <header>Ce, Ces, Cet</header>
     <a class="theory">théorie</a>
     <a href="pages/exercise_ce_ces_cet.html">exercice de texte</a>
   </div>
