--- a/french/pages/exercise_de_du_des.html
+++ b/french/pages/exercise_de_du_des.html
@@ -43,7 +43,7 @@
 
                         <ol class="short-input">
                             <li>
-                                <span title="Où allez-vous"> Les Suisses aiment
+                                <span> Les Suisses aiment
                                     <input type="text" pattern="le">
                                     <b title="le">chocolat</b>. Ils mangent
                                     <input type="text" pattern="du">
@@ -135,7 +135,7 @@
 
                         <ol class="short-input">
                             <li>
-                                <span title="Où allez-vous"> Dans le jardin, il y a
+                                <span> Dans le jardin, il y a
                                     <input type="text" pattern="des">
                                     <b title="des">roses</b> et
                                     <input type="text" pattern="des">
@@ -224,7 +224,7 @@
 
                         <ol class="short-input">
                             <li>
-                                <span title="Où allez-vous">
+                                <span>
                                     <input type="text" pattern="Des">
                                     <b title="Des">pommes</b>
                                 </span>
@@ -332,7 +332,7 @@
 
                         <ol class="short-input">
                             <li>
-                                <span title="Où allez-vous">Au déjeuner, je mange
+                                <span>Au déjeuner, je mange
                                     <input type="text" pattern="du">
                                     <b title="du">pain</b> et je bois
                                     <input type="text" pattern="du">
