added text exercise for ceci-cela-celui

--- a/french/index.html
+++ b/french/index.html
@@ -218,6 +218,13 @@
 
   <div class="card">
     <span class="cefr">A2</span>
+    <header>Ceci, Cela, Celui</header>
+    <a class="theory">théorie</a>
+    <a href="pages/exercise_ceci_cela_celui.html">exercice de texte</a>
+  </div>
+
+  <div class="card">
+    <span class="cefr">A2</span>
     <header>La négation</header>
     <a class="theory">théorie</a>
     <a href="pages/exercise_negation.html">exercice de texte</a>
