--- a/french/pages/exercise_ce_ces_cet.html
+++ b/french/pages/exercise_ce_ces_cet.html
@@ -22,13 +22,13 @@
 <body>
     <main spellcheck="false">
         <article class="text">
-            <h2>Les démonstratifs</h2>
+            <h2>Les démonstratifs: ce, ces, cet</h2>
             <h3>Exercices et corrigé</h3>
 
             <ol class="nested">
                 <li>
                     <section>
-                        <h4>Complétez avec Complétez avec <i>ce</i>, <i>cette</i> ou <i>ces</i>.</h4>
+                        <h4>Complétez avec <i>ce</i>, <i>cette</i> ou <i>ces</i>.</h4>
 
                         <ol class="short-input">
                             <li>
@@ -148,49 +148,37 @@
 
                         <ol class="short-input">
                             <li>
-                                <span>
-                                    <input type="text" pattern="Le">
-                                    <b title="Le">samedi</b>, en général, je fais le magasinage, mais
-                                    <input type="text" pattern="cette">
-                                    <b title="cette">semaine</b>, je ferai du ski.
-                                </span>
+                                <input type="text" pattern="Le">
+                                <b title="Le">samedi</b>, en général, je fais le magasinage, mais
+                                <input type="text" pattern="cette">
+                                <b title="cette">semaine</b>, je ferai du ski.
                             </li>
 
                             <li>
-                                <span>
-                                    <input type="text" pattern="La">
-                                    <b title="La">nuit</b>, il fait toujours noir.
-                                </span>
+                                <input type="text" pattern="La">
+                                <b title="La">nuit</b>, il fait toujours noir.
                             </li>
 
                             <li>
-                                <span>
-                                    <input type="text" pattern="Le">
-                                    <b title="Le">matin</b>, d’habitude, je me lève toujours en retard, mais
-                                    <input type="text" pattern="ce">
-                                    <b title="ce">matin</b> j’étais à l’heure.
-                                </span>
+                                <input type="text" pattern="Le">
+                                <b title="Le">matin</b>, d’habitude, je me lève toujours en retard, mais
+                                <input type="text" pattern="ce">
+                                <b title="ce">matin</b> j’étais à l’heure.
                             </li>
 
                             <li>
-                                <span>
-                                    <input type="text" pattern="Ce">
-                                    <b title="Ce">soir</b>, c’est la fête de mon amie, nous faisons une grande soirée.
-                                </span>
+                                <input type="text" pattern="Ce">
+                                <b title="Ce">soir</b>, c’est la fête de mon amie, nous faisons une grande soirée.
                             </li>
 
                             <li>
-                                <span>
-                                    <input type="text" pattern="Cette">
-                                    <b title="Cette">semaine</b>, j’ai plusieurs examens, j’étudie beaucoup.
-                                </span>
+                                <input type="text" pattern="Cette">
+                                <b title="Cette">semaine</b>, j’ai plusieurs examens, j’étudie beaucoup.
                             </li>
 
                             <li>
-                                <span>
-                                    <input type="text" pattern="Ce">
-                                    <b title="Ce">mois</b> prochain, nous ferons un voyage en Europe.
-                                </span>
+                                <input type="text" pattern="Ce">
+                                <b title="Ce">mois</b> prochain, nous ferons un voyage en Europe.
                             </li>
                         </ol>
                     </section>
