--- a/french/pages/stats.html
+++ b/french/pages/stats.html
@@ -64,7 +64,7 @@
                         <th rowspan="3">date</th>
                         <th class="duration" rowspan="3">durée <br /><br />(heure:) min: sec</th>
                         <th class="conjugations conjugations-plus others" colspan="9">A1</th>
-                        <th class="conjugations conjugations-plus others" colspan="10">A2</th>
+                        <th class="conjugations conjugations-plus others" colspan="11">A2</th>
                         <th class="conjugations" colspan="6">B1</th>
                         <th class="conjugations conjugations-plus" colspan="7">B2</th>
                         <th class="tense-sequence" colspan="4"></th>
@@ -84,6 +84,7 @@
                         <th class="conjugations" colspan="2">imparfait</th>
                         <th class="conjugations" colspan="2">futur simple</th>
                         <th class="others" colspan="1" title="prépositions de temps">prép. de temps</th>
+                        <th class="others" colspan="1">Ceci Cela Celui</th>
                         <th class="others" colspan="1" title="négation 1">nég.1</th>
                         <th class="others" colspan="1" title="négation 2">nég.2</th>
                         <th class="conjugations" colspan="2">impératif</th>
@@ -107,7 +108,8 @@
                         <th class="conjugations"><a href="conjugations.html?Le%20pr%C3%A9sent">liste</a></th>
                         <th class="conjugations"><a href="exercise_present.html">texte</a></th>
 
-                        <th class="conjugations-plus"><a href="exercise_devoir_pouvoir_falloir_vouloir.html">texte</a></th>
+                        <th class="conjugations-plus"><a href="exercise_devoir_pouvoir_falloir_vouloir.html">texte</a>
+                        </th>
 
                         <th class="others"><a href="exercise_de_du_des.html">texte</a></th>
                         <th class="others"><a href="exercise_ce_ces_cet.html">texte</a></th>
@@ -132,6 +134,7 @@
                         <th class="conjugations"><a href="exercise_future.html">texte</a><small>*</small></th>
 
                         <th class="others"><a href="exercise_time_prepositions.html">texte</a><small>*</small></th>
+                        <th class="others"><a href="exercise_ceci_cela_celui.html">texte</a><small>*</small></th>
                         <th class="others"><a href="exercise_negation.html">texte</a><small>*</small></th>
                         <th class="others"><a href="exercise_negation2.html">texte</a><small>*</small></th>
 
@@ -216,6 +219,7 @@
                             <td class="conjugations" data-key="exercise_future.html"></td>
 
                             <td class="others" data-key="exercise_time_prepositions.html"></td>
+                            <td class="others" data-key="exercise_ceci_cela_celui.html"></td>
                             <td class="others" data-key="exercise_negation.html"></td>
                             <td class="others" data-key="exercise_negation2.html"></td>
 
